--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
   justify-content: center;
   padding-top: 20px;
 }
+.subheader img{
+  width: 30px;
+  height: 30px;
+}
+
 
 a.subheader{
   float: right;
@@ -83,10 +88,11 @@ h1 .subheader {
 
 .footer {
   display: flex;
-  width: 100%;
-  height: 60px;
   align-items: center;
   justify-content: center;
+  /* float: left; */
+  width: 100%;
+  height: 60px;
   /* text-align: center; */
 }
 
@@ -192,8 +198,6 @@ image {
 
   .footer a {
     font-size: 6pt;
-    margin-left: -10px;
-    margin-right: 10px;
   }
 
  
