--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,6 @@ h1 .subheader {
 
 .row {
   max-width: 50%;
-  align-items: center;
-  justify-content: center;
 }
 
 .row img {
@@ -89,11 +87,8 @@ h1 .subheader {
 .footer {
   display: flex;
   align-items: center;
-  justify-content: center;
-  /* float: left; */
   width: 100%;
-  height: 60px;
-  /* text-align: center; */
+  margin-left: 33px;
 }
 
 
@@ -187,7 +182,7 @@ image {
   }
 
   .footer {
-    height: 40px;
+    height: 50px;
   }
 
   .footer img {
