--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ body {
 
 .wrapper {
   max-width: 100%;
-  align-items: center;
-  align-content: center;
+  margin: 0;
 }
 
 .header {
@@ -18,25 +17,40 @@ body {
 }
 
 .subheader {
+  display: block;
   width: 100%;
   height: 50%;
-  display: flex;
-  justify-content: center;
-  padding-top: 20px;
+  padding-top: 1rem;
 }
 .subheader img{
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
+}
+.logo {
+  float: left;
+  max-width: 20%;
 }
 
+.info{
+  display: flex;
+  justify-content: center;
+  max-width: 80%;
+  padding-right: 1rem;
+}
 
-a.subheader{
+.language{
   float: right;
+  margin-top: -57px;
+  margin-right: 33px;
+}
+.subheader a{
+  font-size: 15pt;
+  text-align: center;
 }
 
-h1 .subheader {
+.subheader h1 {
   text-align: center;
-  font-size: 18pt;
+  font-size: 29pt;
 }
 
 .container {
@@ -162,8 +176,30 @@ image {
 @media (max-width: 768px) {
 
 
-  .subheader a{
+  .subheader {
     float: right;
+    margin: 0 15px;
+  }
+  .subheader img{
+    width: 30px;
+    height: 30px;
+  }
+  .info{
+    margin-right: 100px;
+    margin-top: -6px;
+  }
+  .language{
+    margin-top: -47px;
+    margin-right: 5px;
+  }
+  .subheader a{
+    font-size: 10pt;
+    text-align: center;
+  }
+  
+  .subheader h1 {
+    text-align: center;
+    font-size: 20pt;
   }
 
   .banner{
